--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r58/three.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" integrity="sha512-dLxUelApnYxpLt6K2iomGngnHO83iUvZytA3YjDUCjT0HDOHKXnVYdf3hU4JjM8uEhxf9nD1/ey98U3t2vZ0qQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://rawgithub.com/mrdoob/three.js/8673cc801c8887ac143b6dc4535c712ff7bf4af4/examples/js/controls/OrbitControls.js"></script>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+            <script type="text/javascript">
+                var withd = window.innerWidth
+                var hait = window.innerHeight
+            </script>
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <title>Judes's Website</title>
           </head>
