--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 <h2>🛠 Skills</h2>
                 <p>Organized, Effective Communication, Teamwork</p>
               </section>
+
+                    <section>
+                <h2>Technical Skills</h2>
+                <p>Python,Javascript,Html,CSS</p>
+              </section>
         
               <section class="left">
                 <h2>🌐 Languages</h2>
